# encapsulation_demonstration

Bank-Management-OOP/: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README(link).md  README.md  SECURITY.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
Bank-Management-OOP/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Bank-Management-OOP/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Bank-Management-OOP/.github/workflows/: ci.yml  codeql.yml  release.yml
Bank-Management-OOP/bank_management/: __init__.py  bank.py  cli.py  exceptions.py  logger.py  models.py  storage.py
Bank-Management-OOP/docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  USAGE.md
Bank-Management-OOP/examples/: advanced_usage.py  basic_usage.py
Bank-Management-OOP/tests/: __init__.py  test_bank.py  test_exceptions.py  test_models.py  test_storage.py
car_class/: car.py  main.py  test_car.py
fan_class/: fan.py  main.py  test_fan.py
pet_class/: pet.py  test_pet.py
